# sposu

./: .gitignore  Cargo.toml  README.md  TODO.txt  commands.txt
assets/: data.json  playlists.json  serialized_songs.json  songs.json
benches/: song_loading.rs
src/: app.rs  main.rs  osu.rs  player.rs  playlist.rs  playlists.rs  renderer.rs  serialize.rs  ui.rs
