[package]
name = "sposu"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.16.0"
libosu = "0.0.28"
tui = "0.19"
crossterm = "0.25"
unicode-width = "0.1"
rand = "0.8.5"
mp3-duration = "0.1.10"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "song_loading"
harness = false